--- a/reset_password.html
+++ b/reset_password.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- mobile metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <!-- site metas -->
+    <title>Sellaci</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="config.js"></script>
+    <script src="script.js"></script>
     <title>Reset Password</title>
     <link rel="stylesheet" href="reset_password.css">
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
@@ -54,7 +65,7 @@
         return response.json();
     }
     function backToLogin(){
-        window.location = "login.html";
+        window.location = "index.html";
     }
 </script>
 
