--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- mobile metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <!-- site metas -->
+    <title>Sellaci</title>
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="config.js"></script>
+    <script src="script.js"></script>
     <title>Créer un compte</title>
     <link rel="stylesheet" href="signup.css">
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
@@ -36,7 +47,7 @@
             .then((login_success) => {
                 if(login_success['success']){
                     console.log('LOGIN SUCCESS')
-                    window.location = "play.html";
+                    window.location = "menu.html";
                 }else{
                     console.log('LOGIN FAIL')
                 }
