--- a/reset_password.html
+++ b/reset_password.html
@@ -21,7 +21,7 @@
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
 
-<body>
+<body class="animate">
     <div id="transition_page" class=" transition active"></div>
     <p id="register">Mettre à jour mon mot de passe ? On t'envoie un email gros malin, regarde tes spams</p>
     <input type='text' name='email' placeholder="Email" id="reset_password_email_box"><br>
