--- a/rules.html
+++ b/rules.html
@@ -22,7 +22,7 @@
     <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
-<body>
+<body class="animate">
     <header><img id ="Logo" src="images/Logo_fond_transparent.png" onclick="BackToMenu()"></header>
     <div id="transition_page" class=" transition active"></div>
     <div id="title">
