--- a/menu.html
+++ b/menu.html
@@ -22,8 +22,7 @@
     <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
-<body>
-    <div id="transition_page" class=" transition active"></div>
+<body class="animate">
     <header><img id ="logo" src="images/Logo_fond_transparent.png" onclick="BackToIndex()"></header>
     <div id="Homepage">           
             <button id="play" onclick="play()" onclick="Init()">Jouer</button><br><br>
@@ -51,7 +50,7 @@
         window.location = "index.html";
     }
     function logout(){
-        window.location = "login.html";
+        window.location = "index.html";
     }
 </script>
 
