--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
 
-<body>
+<body class="animate">
     <div id="transition_page" class=" transition active"></div>
     <p id="create">Créer un compte</p>
     <input type='text' name='email' placeholder="Email" id="email_box"><br>
